[package]
name = "sharded_rwlock"
version = "0.0.0"
authors = ["Christian Thäter <ct@pipapo.org>"]
edition = "2021"
description = "Not so bad global rwlocks"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cehteh/sharded_rwlock.git"
keywords = ["locking", "concurrency"]

[dependencies]
parking_lot = ">= 0.11, <=0.12"

[badges]
maintenance = { status = "actively-developed" }
